# label-studio

./: Dockerfile  package-lock.json  package.json
.github/workflows/: docker-build-ontop.yml  docker-build.yml  docker-release-promote.yml
label_studio/core/settings/: label_studio.py
label_studio/core/static/css/: custom-login.css
label_studio/templates/: base.html  simple.html
label_studio/users/templates/users/: user_base.html
label_studio/users/templates/users/new-ui/: user_base.html  user_login.html  user_signup.html  user_tips.html
my-label-studio/: pyproject.toml
web/: package-lock.json  package.json
web/apps/labelstudio/src/: index.html  main.tsx
web/apps/labelstudio/src/app/: App.scss  RootPage.jsx
web/apps/labelstudio/src/components/Error/: Error.jsx
web/apps/labelstudio/src/components/HeidiTips/: HeidiTip.scss
web/apps/labelstudio/src/components/HorizontalSettingsMenu/: HorizontalSettingsMenu.jsx  HorizontalSettingsMenu.scss  index.js
web/apps/labelstudio/src/components/Menu/: Menu.jsx  MenuItem.jsx
web/apps/labelstudio/src/components/Menubar/: Menubar.jsx
web/apps/labelstudio/src/pages/CreateProject/: CreateProject.jsx
web/apps/labelstudio/src/pages/Home/: HomePage.tsx
web/apps/labelstudio/src/pages/Projects/: Projects.jsx  Projects.scss  ProjectsList.jsx
web/apps/labelstudio/src/pages/Settings/: AnnotationSettings.jsx  DangerZone.jsx  GeneralSettings.jsx  LabelingSettings.jsx  (+1 more)
web/apps/labelstudio/src/styles/: red-highlight-override.css
web/libs/datamanager/src/: dev.jsx
web/libs/datamanager/src/sdk/: dm-sdk.js
(+46 files in other folders)
